--- a/peers-doc/pom.xml
+++ b/peers-doc/pom.xml
@@ -6,6 +6,11 @@
   <artifactId>peers-doc</artifactId>
   <version>0.5.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
 
   <build>
     <plugins>
