--- a/peers-lib/pom.xml
+++ b/peers-lib/pom.xml
@@ -9,6 +9,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
 
   <dependencies>
@@ -17,6 +19,11 @@
       <artifactId>testng</artifactId>
       <version>6.1.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.34.Final</version>
     </dependency>
   </dependencies>
 
