chang groupid artiffactid

--- a/peers-lib/pom.xml
+++ b/peers-lib/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.sourceforge.peers</groupId>
-  <artifactId>peers-lib</artifactId>
+  <groupId>com.dtnet.peers</groupId>
+  <artifactId>peers-lib-gm</artifactId>
   <version>0.5.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -20,11 +20,11 @@
       <version>6.1.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
       <version>4.1.34.Final</version>
-    </dependency>
+    </dependency> -->
   </dependencies>
 
   <build>
