--- a/peers-demo/pom.xml
+++ b/peers-demo/pom.xml
@@ -2,7 +2,8 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.sourceforge.peers</groupId>
+  <!-- <groupId>net.sourceforge.peers</groupId> -->
+  <groupId>com.dtnet.peers</groupId>
   <artifactId>peers-demo</artifactId>
   <version>0.5.1-SNAPSHOT</version>
   <name>peers-demo</name>
@@ -21,7 +22,7 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>peers-lib</artifactId>
+      <artifactId>peers-lib-gm</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
