--- a/peers-javaxsound/pom.xml
+++ b/peers-javaxsound/pom.xml
@@ -2,7 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.sourceforge.peers</groupId>
+  <!-- <groupId>net.sourceforge.peers</groupId> -->
+  <groupId>com.dtnet.peers</groupId>
   <artifactId>peers-javaxsound</artifactId>
   <version>0.5.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -16,7 +17,9 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>peers-lib</artifactId>
+      <!-- <artifactId>peers-lib</artifactId> -->
+      <!-- <groupId>com.dtnet.peers</groupId> -->
+      <artifactId>peers-lib-gm</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
