move custom header to invite handler

--- a/peers-demo/pom.xml
+++ b/peers-demo/pom.xml
@@ -31,4 +31,42 @@
       <version>${project.version}</version>
     </dependency>
   </dependencies>
+  <build>
+  <finalName>peers-demo</finalName>
+    <plugins>
+      <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+      <plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<appendAssemblyId>false</appendAssemblyId>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>net.sourceforge.peers.demo.EventManager</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>assembly</goal>
+							<!--goal>copy-dependencies</goal -->
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+    </plugins>
+  </build>
 </project>
