--- a/peers-lib/pom.xml
+++ b/peers-lib/pom.xml
@@ -1,46 +1,86 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.dtnet.peers</groupId>
-  <artifactId>peers-lib-gm</artifactId>
-  <version>0.5.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.dtnet.peers</groupId>
+    <artifactId>peers-lib-gm</artifactId>
+    <version>0.5.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.1.1</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
-      <version>4.1.34.Final</version>
-    </dependency> -->
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.1.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <!-- <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-all</artifactId>
+          <version>4.1.34.Final</version>
+        </dependency> -->
+        <dependency>
+            <groupId>org.restcomm.media.codecs</groupId>
+            <artifactId>g729</artifactId>
+            <version>6.0.49</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/main/resource/lib/g729-6.0.49.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.restcomm.media</groupId>
+            <artifactId>spi</artifactId>
+            <version>6.0.49</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/main/resource/lib/spi-6.0.49.jar</systemPath>
+        </dependency>
+    </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.10</version>
-        <configuration>
-          <includes>
-            <include>**/*TestNG.java</include>
-          </includes>
-        </configuration>
-      </plugin>
+    <!--<build>-->
+    <!--<plugins>-->
+    <!--<plugin>-->
+    <!--<groupId>org.apache.maven.plugins</groupId>-->
+    <!--<artifactId>maven-surefire-plugin</artifactId>-->
+    <!--<version>2.10</version>-->
+    <!--<configuration>-->
+    <!--<includes>-->
+    <!--<include>**/*TestNG.java</include>-->
+    <!--</includes>-->
+    <!--</configuration>-->
+    <!--</plugin>-->
 
-    </plugins>
-  </build>
-
+    <!--</plugins>-->
+    <!--</build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                            <includeScope>system</includeScope>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
