--- a/peers-lib/pom.xml
+++ b/peers-lib/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
         <!-- <dependency>
           <groupId>io.netty</groupId>
           <artifactId>netty-all</artifactId>
