--- a/peers-lib/pom.xml
+++ b/peers-lib/pom.xml
@@ -30,11 +30,11 @@
             <!--<artifactId>slf4j-api</artifactId>-->
             <!--<version>1.7.25</version>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.11.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.logging.log4j</groupId>-->
+            <!--<artifactId>log4j-api</artifactId>-->
+            <!--<version>2.11.1</version>-->
+        <!--</dependency>-->
         <!-- <dependency>
           <groupId>io.netty</groupId>
           <artifactId>netty-all</artifactId>
